# Project2

Project2_code/: CMakeLists.txt  DatalogProgram.cpp  DatalogProgram.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Rule.cpp  Rule.h  main.cpp
